# SmartLifePlanner

./: .env  INSTALL.md  README.md  main.py  pyproject.toml  requirements.txt
data/: calendar.json  longterm_memory.json  recipes.json  tasks.db
logs/: 0bfdd09e-4c72-4a8b-a4e8-a947c2222e7b.jsonl  0daaa094-2b9c-408f-b92c-4eac4ac3e308.jsonl  12251f26-9587-457f-ac20-c4cf2ff1cb11.jsonl  12a1e56e-8b34-422b-a4ef-3e086eff0729.jsonl  1990ee76-9202-4b79-be95-4b1f97c7a12b.jsonl  2d423412-c4f8-4d93-ae39-cbbea1d71be2.jsonl  366ed635-28db-49fd-96d3-70905acf38a8.jsonl  37871575-ea06-41a1-a9be-82c197ea7a9f.jsonl  3883b99a-c5a9-46e8-bc9f-595fedb96267.jsonl  41291409-ea42-4562-b9d1-538a9374b8a9.jsonl  4501032f-8216-4cab-9f31-6ab2ae66fb1f.jsonl  4cecb88c-7749-4ff7-95d6-5a9e8b13b5c2.jsonl  4e2b9410-11f3-4961-a424-fa128718ea07.jsonl  531fee77-4118-4b13-8411-ed300f7316c1.jsonl  54c7bdd0-e782-4f0c-9e57-40ffb17baeb6.jsonl  66627591-1d55-487e-915e-a0ae02745540.jsonl  7757f946-faec-4fed-8f2e-01cc3503e8e8.jsonl  78cff647-d685-418b-8660-0cbc9090645d.jsonl  7ae08f77-52ad-46ad-9d58-e1a98fa886d8.jsonl  7eaa5ebd-c641-4205-986f-73b0e1c33f2b.jsonl  83f2a1f8-0c2a-4ca8-977e-117f74663866.jsonl  87174ac6-8926-4f4b-a99d-4fda267b574e.jsonl  891af64c-5b84-449f-b810-3ccba0e79309.jsonl  89edf91d-1c53-4944-a9cd-3229ddbc72aa.jsonl  90391077-7040-42b5-a73a-43cf5ce8526d.jsonl  91ed669f-ea9b-49a6-a552-cdec6a21035d.jsonl  94f3818c-c97c-4be6-8e8a-2691b2425cb5.jsonl  9729fb1a-19eb-4e28-997e-c7648ef7ce30.jsonl  9eb1fa6e-f211-413c-9e87-3ff48a20b4fc.jsonl  a26ed867-cf9a-41a0-9702-72845f30edad.jsonl  (+14 more)
notebooks/: demo.ipynb  (+1 more)
(+33 files in other folders)
